# bible_mem_app

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
frontend/: index.html
frontend/static/css/: app.css
frontend/static/js/: app.js  session.js
scripts/: inspect_timestamps.py  test_aligner_speed.py  test_sr_live.py  test_tts_live.py
src/: config.py
src/aligner/: base.py  whisperx_aligner.py
src/api/: dependencies.py  main.py
src/api/routers/: progress.py  sessions.py  verses.py
src/data/: database.py  models.py
src/progression/: engine.py  levels.py
src/scorer/: base.py  sequence_aligner.py
src/segmenter/: segmenter.py
src/session/: session_manager.py
src/shared/: __init__.py  types.py
src/sr/: base.py  whisper_sr.py
src/text/: base.py  web_provider.py
src/tts/: base.py  google_tts_provider.py
tests/: test_aligner.py  test_api.py  test_data_models.py  test_google_tts_provider.py  test_progression.py  test_scorer.py  test_segmenter.py  test_session_manager.py  test_web_provider.py  test_whisper_sr.py
